# NN_Discrete

./: NN_ansatz.ipynb  NN_ansatz_JAX.ipynb  README.md  VMC.ipynb  fix_env.sh  learning_netket.ipynb  main.py  main_complex.py  main_real.py  more_terms_test.ipynb  neutrons_roth_NN.ipynb  params.json  pyproject.toml  run_python_gpu  utils.py
archive/: NN_ansatz.ipynb  NN_ansatz_JAX.ipynb  learning_JAX.ipynb  learning_netket.ipynb  learning_quantax.ipynb
models/: Hubbard_complex_test.eqx  Hubbard_real_test.eqx
