[project]
name = "nn-discrete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optimistix>=0.1.0",
    "quantax[full]>=0.2.1",
]

[project.optional-dependencies]
cpu = ["jax[cpu]>=0.9.2"] 
gpu = ["jax[cuda12]>=0.9.2"]
